Version 2.1.2:
   - [Command-line] Performance fix (unrequested channels were being read)
   - [Command-line] Introduce pressure-based altitude computing
   - [Command-line] Increased verbosity when -v is used
   - [QTenki] Fixed a minimize-to-tray bug
   - [QTenki] Added save messages and clear messages buttons
   - [Qtenki] Errors will be shown in bigview
   - Prevent RH values from exiting the 0 - 100% range
   - Various small bug fixes

Version 2.1.1:
   - [Command-line] Fixed a bug which prevented usbtenkiget.exe from working
     in some environments.

Version 2.1.0:
   - [Firmwares] Updated V-USB to newer verison.
   - Add support for high precision MS5611 pressure sensor.
   - Add support for the MLX90614 infrared temperature sensor.
   - RTD temperature calibration has changed (increased precision).

Version 2.0.4:
   - Linux: Added a sample udev rules files to script/ 
		(To use the USB Tenki device without being root)
   - [Core] Support for the MPXV7002 differential pressure sensors
   - Additional documentation for building on MacOS X and fixes.

Version 2.0.3:
   - [Core] Fix a device enumeration problem

Version 2.0.2:
   - [QTenki] Log file can now be viewed while logging. New records will
     appear in real time.
   - [QTenki] Added voltage, current and power unit preferences.
   - [QTenki] Number of digits following the decimal now configurable.
   - [QTenki] Added a basic realtime graphing tab using QCustomPlot.
   - Support for Dracal USB Vendor ID

Version 1.9.7:
   - [QTenki] Scrollbars will now appear if there is not enough space.
   - [QTenki] Remember window positions and size
   - [QTenki] Options to append or overwrite file, with optional confirmation.
   - [QTenki] Added a 'log comment' field that gets written to the log file.
   - [Qtenki] Sample loop interval now configurable
   - [Command-line] Added option -x to set decimal precision

Version 1.9.6: